// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginStatement component adds warning highlight for cpu time 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="monPipelineViewer__statement"
  component="div"
  direction="row"
  gutterSize="none"
  justifyContent="spaceBetween"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="xs"
      justifyContent="flexStart"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          aria-label="mutate"
          className="monPipelineViewer__plugin"
          color="primary"
          flush="left"
          iconSide="left"
          iconType="dot"
          onClick={[Function]}
          size="xs"
          type="button"
        >
          <span>
            mutate
          </span>
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiBadge
          color="default"
          iconSide="left"
          onClick={[Function]}
          onClickAriaLabel="View details"
        >
          mutatePlugin
        </EuiBadge>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <Metric
        className="monPipelineViewer__metric--cpuTime"
        key="cpuMetric"
        value="25%"
        warning={true}
      />
      <Metric
        className="monPipelineViewer__metric--eventMillis"
        key="eventMillis"
        value="100 ms/e"
        warning={false}
      />
      <Metric
        className="monPipelineViewer__metric--events"
        key="eventsReceived"
        value="120 e/s received"
      />
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PluginStatement component adds warning highlight for event millis 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="monPipelineViewer__statement"
  component="div"
  direction="row"
  gutterSize="none"
  justifyContent="spaceBetween"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="xs"
      justifyContent="flexStart"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          aria-label="mutate"
          className="monPipelineViewer__plugin"
          color="primary"
          flush="left"
          iconSide="left"
          iconType="dot"
          onClick={[Function]}
          size="xs"
          type="button"
        >
          <span>
            mutate
          </span>
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiBadge
          color="default"
          iconSide="left"
          onClick={[Function]}
          onClickAriaLabel="View details"
        >
          mutatePlugin
        </EuiBadge>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <Metric
        className="monPipelineViewer__metric--cpuTime"
        key="cpuMetric"
        value="25%"
        warning={false}
      />
      <Metric
        className="monPipelineViewer__metric--eventMillis"
        key="eventMillis"
        value="100 ms/e"
        warning={true}
      />
      <Metric
        className="monPipelineViewer__metric--events"
        key="eventsReceived"
        value="120 e/s received"
      />
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PluginStatement component does not render explicit id field if no id is specified 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="monPipelineViewer__statement"
  component="div"
  direction="row"
  gutterSize="none"
  justifyContent="spaceBetween"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="xs"
      justifyContent="flexStart"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          aria-label="stdin"
          className="monPipelineViewer__plugin"
          color="primary"
          flush="left"
          iconSide="left"
          iconType="dot"
          onClick={[Function]}
          size="xs"
          type="button"
        >
          <span>
            stdin
          </span>
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <Metric
        className="monPipelineViewer__metric--eventsEmitted"
        key="eventsEmitted"
        value="125 e/s emitted"
      />
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PluginStatement component renders input metrics and explicit id fields 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="monPipelineViewer__statement"
  component="div"
  direction="row"
  gutterSize="none"
  justifyContent="spaceBetween"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="xs"
      justifyContent="flexStart"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          aria-label="stdin"
          className="monPipelineViewer__plugin"
          color="primary"
          flush="left"
          iconSide="left"
          iconType="dot"
          onClick={[Function]}
          size="xs"
          type="button"
        >
          <span>
            stdin
          </span>
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiBadge
          color="default"
          iconSide="left"
          onClick={[Function]}
          onClickAriaLabel="View details"
        >
          standardInput
        </EuiBadge>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <Metric
        className="monPipelineViewer__metric--eventsEmitted"
        key="eventsEmitted"
        value="125 e/s emitted"
      />
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PluginStatement component renders processor statement metrics 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="monPipelineViewer__statement"
  component="div"
  direction="row"
  gutterSize="none"
  justifyContent="spaceBetween"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="xs"
      justifyContent="flexStart"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          aria-label="mutate"
          className="monPipelineViewer__plugin"
          color="primary"
          flush="left"
          iconSide="left"
          iconType="dot"
          onClick={[Function]}
          size="xs"
          type="button"
        >
          <span>
            mutate
          </span>
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiBadge
          color="default"
          iconSide="left"
          onClick={[Function]}
          onClickAriaLabel="View details"
        >
          mutatePlugin
        </EuiBadge>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="s"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <Metric
        className="monPipelineViewer__metric--cpuTime"
        key="cpuMetric"
        value="25%"
        warning={false}
      />
      <Metric
        className="monPipelineViewer__metric--eventMillis"
        key="eventMillis"
        value="100 ms/e"
        warning={false}
      />
      <Metric
        className="monPipelineViewer__metric--events"
        key="eventsReceived"
        value="120 e/s received"
      />
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;
